envoy-gateway/backend/backend-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-backend-lb
spec:
  selector:
    app: app-backend-lb
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-backend-lb
  labels:
    app: app-backend-lb
spec:
  replicas: 4
  selector:
    matchLabels:
      app: app-backend-lb
  template:
    metadata:
      labels:
        app: app-backend-lb
    spec:
      containers:
        - name: backend
          image: registry.k8s.io/gateway-api/conformance/echo-basic:v0.1.0
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 2
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              cpu: 10m
