envoy-gateway/backend/ip-and-fqdn.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: backend-ip-v1
          port: 3000
          weight: 1
        - group: gateway.envoyproxy.io
          kind: Backend
          name: backend-ip-v2
          namespace: default
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /ip
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: backend-fqdn-v1
          port: 8080
          weight: 1
        - group: gateway.envoyproxy.io
          kind: Backend
          name: backend-fqdn-v2
          namespace: default
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /fqdn
